# multi-agent-orchestrator

./: .gitignore  LICENSE  Makefile  README.md  SECURITY.md  VULNERABILITY_ASSESSMENT.md  create_and_push.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/orchestrator/: __init__.py  config.py  llm.py  main.py
src/orchestrator/graph/: __init__.py  builder.py  reviewer.py  specialists.py  state.py  supervisor.py
src/orchestrator/hitl/: __init__.py  audit.py  auth.py  escalation.py  queue.py  sensitivity.py
src/orchestrator/memory/: __init__.py  long_term.py  short_term.py
src/orchestrator/observability/: __init__.py  tracing.py
src/orchestrator/tools/: __init__.py  registry.py
src/orchestrator/worker/: __init__.py  celery_app.py
tests/: test_audit.py  test_builder_errors.py  test_cli.py  test_hitl.py  test_orchestration.py  test_security.py  test_smoke.py
ui/: review_app.py
